added ARIA and readme

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <p>This portfolio is designed to show off some of the accomplishments of Matthew Arney, a former Pastry Chef looking to enter the tech space as a Software Engineer</p>
         </header>
         <nav>
+            <p><h4>Navigation:</h4></p>
             <ul>
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -42,17 +43,17 @@
                 <h3>Projects</h3>
                 <p><h5>These projects and others are available at <a href="https://github.com/MArney86">MArney86 repository @ github.com</a></h5></p>
                 <article>
-                    <img src="images/contactmanagement.jpg" alt="Screenshot of the Contact Management App in VSCode">
+                    <img src="images/contactmanagement.jpg" alt="Screenshot of the Contact Management App in VSCode" aria-label="Screenshot of the Contact Management App in VSCode">
                     <p><a href="https://github.com/MArney86/CT_Mini_Project_Contact_Management_System">Contact Management System @ github.com</a></p>
                     <p>A basic python app to manage and modify personal contacts with text file saving support</p>
                 </article>
                 <article>
-                    <img src="images/librarydb.jpg" alt="Screenshot of the Library Management with DB integration App in VSCode">
+                    <img src="images/librarydb.jpg" alt="Screenshot of the Library Management with DB integration App in VSCode" aria-label="Screenshot of the Library Management with DB integration App in VSCode">
                     <p><a href="https://github.com/MArney86/CT_Mini_Project_Library_Management_System_with_Database_Integration">Library Management System with Database Integration @ github.com</a></p>
                     <p>A Library Management System using object-oriented design and database integration using MySQL and the MySQL Connector for Python</p>
                 </article>
                 <article>
-                    <img src="images/e-commerce-api.jpg" alt="Screenshot of the E-commerce API App in VSCode">
+                    <img src="images/e-commerce-api.jpg" alt="Screenshot of the E-commerce API App in VSCode" aria-label="Screenshot of the E-commerce API App in VSCode">
                     <p><a href="https://github.com/MArney86/CT_Mini-Project_E-commerce_API">E-commerce API @ github.com</a></p>
                     <p>A basice E-commerce API usint Flask, Marshmallow, and SQLAlchemy along with MySQL and the MySQL Connector for Python</p>
                 </article>
@@ -109,9 +110,9 @@
                 <p>I can be contacted through <a href="mailto:matthew.h.arney.1986@gmail.com">Email or <a href="https://www.linkedin.com/in/matthew-arney-542027304/">LinkedIn</a></p>
                 <form action="\messages" method="post">
                     <p>or by leaving a message here:</p>
-                    <textarea id="comments" name="comments" rows="4" cols="50" placeholder="Please leave a message with your name and contact info if you want a reply"></textarea>
-                    <button type="reset">Reset</button>
-                    <button type="submit">Submit</button>
+                    <textarea id="comments" name="comments" rows="4" cols="50" placeholder="Please leave a message with your name and contact info if you want a reply" aria-label="Please leave a message with your name and contact info if you want a reply"></textarea>
+                    <button type="reset" aria-label="reset button">Reset</button>
+                    <button type="submit" aria-lable="submit button">Submit</button>
                 </form>
             </section>
         </main>
